non-msrv-tests/tests/ui/missing_default.stderr
error: required `default` option on a variant if `Default` is being implemented
 --> tests/ui/missing_default.rs:2:1
  |
2 | / #[derive_where(Default; T)]
3 | | enum Test<T> {
4 | |     A(T),
5 | | }
  | |_^
